--- a/nde/Makefile
+++ b/nde/Makefile
@@ -1,2 +1,2 @@
 make:
-	g++-7 -std=c++17 -g3 -Wall -Wextra -Wconversion main.cpp nde.hpp -o release
+	g++-7 -std=c++17 -g3 -Wall -Wextra -Wconversion -Wpedantic main.cpp nde.hpp -o release
